- Renamed all 'precision' properties to 'granularity'
- Removed 'name' property from Sequence
- Renamed @DescriptorBased to @Descriptor
- Removed totalDigits and fractionDigits features
- Removed generic parameter from Consumer interface
- Moved Consumer interface to org.databene.benerator, moved general implementations to org.databene.consumer
- Moved StorageSystem interface to org.databene.benerator, moved implementations to org.databene.storage
- Renamed platform 'flat' to 'fixedwidth' and classes 'FlatFile...' to 'FixedColumnWidth...'


enhancements
------------
- supporting different types of GeneratorFactories
- Defined VolumeGeneratorFactory, EquivalenceGeneratorFactory, CoverageGeneratorFactory and SerialGeneratorFactory 
- new annotation @DecimalGranularity
- New Converter class NumberQuantizer
- Added configurable GeneratorFactory to BeneratorContext
- Defined SimpleMethodParamsGenerator as abstract parent class for Generators that create method parameters as Object arrays.
- Defined AsStringGenerator for wrapping an arbitrary Generator and return String representations of products
- CompositeStringGenerator supports uniqueness
- Direct DB Sanity integration by <dbsanity database="..." ... />
- Added TimeUtil.addDays(), addMonths(), addYears(), midnightOf()
- Introduced generatorFactory attribute in <setup>
- Added generic 'offset' feature
- Added 'cached' feature to DBSequenceGenerator, removed OfflineSequenceGenerator
- renamed 'source' property to 'database' in DBSequenceGenerator and DBSeqHiLoGenerator
- New Generator class 'StringGenerator'
- cleaned up generator hierarchies for arrays


bug fixes (Find the bug tracker at http://sourceforge.net/tracker2/?group_id=222964&atid=1057386)
-------------------------------------------------------------------------------------------------
- Bug fix in UniqueCompositeArrayGenerator
- Bug fix in evaluation of dynamic selectors that make use of an entity attribute