@@ -55,6 +55,7 @@ public interface DescriptorConstants {
     static final String ATT_DEFAULT_ERR_HANDLER = "defaultErrorHandler";
     static final String ATT_ACCEPT_UNKNOWN_SIMPLE_TYPES = "acceptUnknownSimpleTypes";
     static final String ATT_GENERATOR_FACTORY = "generatorFactory";
+    static final String ATT_DEFAULT_IMPORTS = "defaultImports";
     
     static final String EL_IF = "if";
     static final String EL_THEN = "then";
